djangoerp/themes/default/static/css/default.css
#messages {
    position: fixed;
    top: calc(50px - 2em);
    right: 1em;
    width: calc(100% - 2em);
    max-width: 40em;
    z-index: 103;
}

#header,
#sidebar {
    width: 100%;
    min-width: 280px;
}

#header {
    border-bottom: 1px solid rgba(255,255,255,.15);
}

#header .item {
}

#header .brand.item a {
    display: inline-block;
    width: 24px;
    height: 24px;
    font-size: 0;
    color: transparent;
    background: url(../images/logo.png) no-repeat center;
}

#header .date.item {
    flex-grow: 2;
}

#header .date.item .label {
    margin: 0;
    padding: 0;
    background: transparent;
}

#header .sidebar.item {
    display: flex;
}

#header .nav.item {
    display: none;
}

#sidebar {
    display: flex;
    position: fixed;
    top: 50px;
    bottom: 50px;
    left: -100%;
    z-index: 10;
    margin: 0;
    padding: 0;
    border-bottom: 5px solid #db2828;
    border-radius: 0;
    -webkit-transition: left 200ms;
    transition: left 200ms;
}

#sidebar.visible {
    left: 0;
}

#sidebar > .region {
    width: 100%;
}

#sidebar .ui.vertical.menu > .item {
    border-radius: 0;
}

.pusher {
    min-width: 320px;
    height: 100%;
}

#main {
    min-height: 100%;
    margin: 50px 0 0;
    padding-bottom: 2em;
    background-color: #fbfbfc;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

#main .ui.page-header,
#main .ui.page-header+.ui.divider {
    margin-left: -1em !important;
    margin-right: -1em !important;
}

#main .ui.page-header {
    padding-left: 1em;
    padding-right: 1em;
    padding-bottom: 1rem;
    background-color: #fff;
}

#main .ui.page-header+.ui.divider {
    margin-bottom: 2rem;
}

#main .ui.page-header .row .column {
    padding-bottom: 0 !important;
}

#userarea {
    position: fixed;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 102;
    margin: 0;
    border-top: 1px solid rgba(255,255,255,.15);
    border-radius: 0;
}

#userarea .item {
    display: flex;
}

#userarea .breadcrumb.item {
    display: none;
}

#userarea .breadcrumb.item .divider {
    color: rgba(255,255,255,.6);
}

#userarea .profile.item {
    flex-grow: 2;
}

#userarea .profile.item .avatar.image {
    margin-top: -0.19em;
    margin-bottom: -0.19em;
}

#userarea .logout.item:hover {
    background-color: #db2828;
}

#footer {
    padding-bottom: 110px;
}

/* Very very small devices (phones, 480px and up) *****************************/

@media (min-width: 480px) {

    #userarea .breadcrumb.item {
        display: flex;
        flex-grow: 2;
    }

    #userarea .breadcrumb.item .divider,
    #userarea .breadcrumb.item .section:not(:last-child) {
        display: none;
    }
}

/* Very small devices (phones, unitl 767px) ***********************************/

@media (max-width: 767px) {

    #main .ui.page-header .column {
        text-align: center;
    }
}

/* Small devices (tablets, 768px and up) **************************************/

@media (min-width: 768px) {

    #userarea .breadcrumb.item {
        display: flex;
        flex-grow: 15;
    }

    #userarea .breadcrumb.item .divider,
    #userarea .breadcrumb.item .section:not(:last-child) {
        display: inline-block;
    }

    #main .ui.page-header,
    #main .ui.page-header+.ui.divider {
        margin-left: -2em !important;
        margin-right: -2em !important;
    }

    #main .ui.page-header .row {
        padding-bottom: 0;
    }
}

/* Medium devices (desktops, 992px and up) ************************************/

@media (min-width: 992px) {

    #header {
        -webkit-transition: width 200ms;
        transition: width 200ms;
    }

    #header,
    #sidebar {
        width: 280px;
        min-width: 64px;
    }

    #header.collapsed {
        width: 193px;
    }

    #header.collapsed .date.item .label {
        display: none;
    }

    #header.collapsed .nav.item .icon {
        transform: rotate(180deg);
    }

    #sidebar {
        left: 0;
        bottom: 0;
    }

    #sidebar+.pusher,
    #sidebar+.pusher #userarea {
        margin-left: 280px;
        -webkit-transition: margin 200ms;
        transition: margin 200ms;
    }

    #header.collapsed+#sidebar {
        left: -280px;
    }

    #header.collapsed+#sidebar+.pusher {
        margin-left: 0;
    }

    #header.collapsed+#sidebar+.pusher #userarea {
        margin-left: 193px;
    }

    #header .sidebar.item {
        display: none;
    }

    #header .nav.item {
        display: flex;
    }

    #userarea {
        top: 0;
        bottom: auto;
        border-bottom: 1px solid rgba(34,36,38,.1);
        background-color: #fff;
    }

    #userarea .item,
    #userarea .item a:not(.ui) {
        color: rgba(0,0,0,.87);
    }

    #userarea .item:before {
        background: rgba(34,36,38,.1);
    }

    #userarea a.item:hover,
    #userarea .dropdown.item:hover {
        background: rgba(0,0,0,.03);
    }

    #userarea .active.item {
        background: rgba(0,0,0,.05);
        color: rgba(0,0,0,.95)!important;
    }

    #userarea .item > .ui.floating.label {
        top: auto;
        bottom: -1em;
    }

    #userarea .breadcrumb.item {
        flex-grow: 20;
    }

    #userarea .breadcrumb.item .divider {
        color: rgba(0,0,0,.6);
    }

    #userarea .logout.item:hover {
        color: #fff;
    }

    #main {
        padding: 2em;
    }

    #main .ui.page-header {
        margin-top: -2em;
        padding-top: 1em;
    }

    #main .ui.page-header .row {
        padding-top: 0;
    }
}

/* Big devices (1200px and up) ************************************************/

@media (min-width: 1200px) {
}

